[package]
name = "spyware_cnc"
version = "0.1.0"
authors = ["talbor49 <talbor49@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-cpuid = "7.0.3"
spyware_cli = { git = "https://github.com/talbor49/spyware_cli" }
spyware = { git = "https://github.com/talbor49/spyware" }
failure = "0.1.7"
ron = "0.5.1"